--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "~4.13.4",
-    "mongoose": "~4.4.4"
+    "mongoose": "~4.4.4",
+    "method-override": "~2.3.5",
+    "body-parser": "~1.15.0"
   }
 }
