--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "jquery": "^2.2.0",
     "laravel-elixir": "^4.2.0",
     "mustache": "^2.2.1",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "medium-editor": "~5.14.3"
   }
 }
