--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "express": "~4.13.4",
     "mongoose": "~4.4.4",
     "method-override": "~2.3.5",
-    "body-parser": "~1.15.0"
+    "body-parser": "~1.15.0",
+    "bcrypt": "~0.8.5"
   }
 }
