--- a/server/config/app.json
+++ b/server/config/app.json
@@ -1,3 +1,9 @@
 {
-  "port": 55555
+  "port": 55555,
+  "auth": {
+    "secret": "aRandomString",
+    "options": {
+      "expiresIn": 3600
+    }
+  }
 }
