--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "laravel-elixir": "^4.2.0",
     "medium-editor": "~5.14.3",
     "mustache": "^2.2.1",
-    "normalize.scss": "~0.1.0"
+    "normalize.scss": "~0.1.0",
+    "js-cookie": "~2.1.0"
   }
 }
