--- a/server/config/app.json
+++ b/server/config/app.json
@@ -1,9 +1,3 @@
 {
-  "port": 55555,
-  "auth": {
-    "secret": "aRandomString",
-    "options": {
-      "expiresIn": 3600
-    }
-  }
+  "port": 55555
 }
