--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,7 @@
     "jsonwebtoken": "~5.7.0",
     "gridfs-stream": "~1.1.1",
     "string-to-stream": "~1.0.1",
-    "passport": "~0.3.2",
-    "passport-twitter": "~1.0.4",
-    "passport-facebook": "~2.1.0"
+    "bluebird": "~3.3.4",
+    "node-twitter-api": "~1.7.0"
   }
 }
